# Glue

./: .gitignore  .gitmodules  Glue.cmake  Node.h  README.md  Scene.cpp  Scene.h  deserialize.cpp  deserialize.h  glue.h
example/: Add.cpp  Add.h  CMakeLists.txt  Constant.cpp  Constant.h  Gain.cpp  Gain.h  Printer.cpp  Printer.h  convert.cpp  main.cpp  scene.json
generator/: .glue.py.swp  generator.py  glue.py  templates.py  test.py  tests.py
generator/templates/: Block.cpp  Block.h  GlueTypes.h  blocks.json  convert.h  deserialize.h  glue.cpp  glue.js  headers.cpp  parsed.cpp
generator/tests/: annotations.py  glue.py
generator/tests/files/: Add.h  BadAnnotation1.h  BadAnnotation2.h  BadAnnotation3.h  BadEvent1.h  BadEvent2.h  BadEvent3.h  BadField1.h  BadField2.h  BadField3.h  BadField4.h  BadField5.h  BadField6.h  BadField7.h  Dummy.h  Gain.h  Gains.h
include/glue/: Controller.h  Glue.h  Link.h  Node.h  Scene.h  Server.h  Tick.h  glue.h
proto/: CMakeLists.txt  Constant.h  Glue.h  GlueConstant.cpp  GlueConstant.h  GluePrinter.cpp  GluePrinter.h  Link.h  Makefile  Node.h  Printer.h  Scene.cpp  Scene.h  convert.cpp  deserialize.cpp  glue.cpp  main.cpp  scene.json  types.def
src/: Controller.cpp  Scene.cpp  Server.cpp  deserialize.cpp
www/: index.html
www/js/: glue.js
